k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-1
  template:
    metadata:
      labels:
        app: frontend-1
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: frontend-1-html
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-1
spec:
  selector:
    app: frontend-1
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-2
  template:
    metadata:
      labels:
        app: frontend-2
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: frontend-2-html
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-2
spec:
  selector:
    app: frontend-2
  ports:
    - name: http
      port: 80
      targetPort: http
