k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontends
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frontend-1.demo.sezertetik.dev
        - frontend-2.demo.sezertetik.dev
      secretName: frontends-tls
  rules:
    - host: frontend-1.demo.sezertetik.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-1
                port:
                  name: http
    - host: frontend-2.demo.sezertetik.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-2
                port:
                  name: http
